# time-management

./: .env.example  .gitignore  docker-compose.yml  justfile
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ad4857436af_initial_schema.py  291dc2fa0da3_add_invitation_codes_table.py  3bcb173190f3_add_financial_tracking.py  4361e6817e4b_make_phase_end_date_nullable.py  5800ea4c4e71_add_employee_role_optional_enddate_.py  9ea10f34874a_add_project_statuses_table.py  a1b2c3d4e5f6_add_phase_status_update_project_statuses.py  b7e2f1a3c4d5_add_customer_and_salesforce_link_to_projects.py  da5554c84b2a_add_roles_table_refactor_employee_role_.py  fc280fb330f7_rename_availability_to_job_percentage.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  exceptions.py  rbac.py  security.py
backend/app/dao/: assignment_dao.py  employee_dao.py  funding_source_dao.py  invitation_dao.py  phase_dao.py  project_dao.py  project_status_dao.py  role_dao.py  role_requirement_dao.py  settings_dao.py  user_dao.py
backend/app/database/: seed.py  session.py
backend/app/enums/: __init__.py  allocation_type.py  billing_type.py  employee_status.py  project_status.py  user_role.py
backend/app/middleware/: error_handler.py
backend/app/models/: tables.py
backend/app/routers/: analytics_router.py  assignment_router.py  auth_router.py  (+7 more)
backend/tests/: conftest.py  test_analytics.py  test_assignments.py  test_auth.py  test_employees.py  test_health.py  test_projects.py  test_role_requirements.py  test_roles.py  test_settings.py
(+100 files in other folders)
